Add running score to dom

--- a/index.html
+++ b/index.html
@@ -13,5 +13,10 @@
         <button id="paper" type="button">Paper</button>
         <button id="scissors" type="button">Scissors</button>
     </div>
+    <div class="results">
+        <p id="score"></p>
+        <p id="round"></p>
+        <p id="game"></p>
+    </div>
 </body>
 </html>
